@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-10-24T08:22:50Z",
-  "count_outdated" : 59,
-  "uniques_outdated" : 44,
+  "timestamp" : "2023-10-26T08:22:28Z",
+  "count_outdated" : 60,
+  "uniques_outdated" : 45,
   "count" : 63,
   "uniques" : 47,
   "clones" : [
-    {
-      "timestamp": "2023-10-12T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-10-17T00:00:00Z",
       "count": 2,
